--- a/src/view/JDlgClientes.form
+++ b/src/view/JDlgClientes.form
@@ -283,9 +283,9 @@
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="3">
-            <StringItem index="0" value="Feminino"/>
-            <StringItem index="1" value="Masculino"/>
-            <StringItem index="2" value="Outro"/>
+            <StringItem index="0" value="No sexo"/>
+            <StringItem index="1" value="Feminino"/>
+            <StringItem index="2" value="Masculino"/>
           </StringArray>
         </Property>
       </Properties>
