--- a/src/view/JFrmLogin.form
+++ b/src/view/JFrmLogin.form
@@ -30,8 +30,8 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="85" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="joa_jPwfLogin" alignment="0" max="32767" attributes="0"/>
-                  <Component id="joa_jTxtLogin" alignment="0" max="32767" attributes="0"/>
+                  <Component id="joa_jPwfSenha" alignment="0" max="32767" attributes="0"/>
+                  <Component id="joa_jTxtUsuario" alignment="0" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -57,11 +57,11 @@
               <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="joa_jTxtLogin" min="-2" pref="30" max="-2" attributes="0"/>
+              <Component id="joa_jTxtUsuario" min="-2" pref="30" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
               <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="joa_jPwfLogin" min="-2" pref="30" max="-2" attributes="0"/>
+              <Component id="joa_jPwfSenha" min="-2" pref="30" max="-2" attributes="0"/>
               <EmptySpace pref="40" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="joa_jBtnCancelarLogin" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -74,7 +74,7 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JTextField" name="joa_jTxtLogin">
+    <Component class="javax.swing.JTextField" name="joa_jTxtUsuario">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
@@ -102,7 +102,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="joa_jBtnCancelarLoginActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JPasswordField" name="joa_jPwfLogin">
+    <Component class="javax.swing.JPasswordField" name="joa_jPwfSenha">
     </Component>
     <Component class="javax.swing.JButton" name="joa_jBtnSair">
       <Properties>
